--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Diego "Jusi" Sanchez's portfolio
+description: My personal portfolio to learn more about me and my projects.
